# clp-master

./: 404.html  Diagrama C4.drawio  Diagrama de .drawio  Diagrama de contêiner.drawio  Diagrama sem nome.drawio  Procfile  README.md  index.html  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS
Documentação da arquitetura/: Arquitetura C4
api/controllers/: book_controller.py  livro_controller.py
api/models/: colecao.py  historico.py  livro.py  usuario.py
api/rotas/: urls.py
api/serializers/: book.py  colecao.py  historico.py  usuario.py
config/: schema.py  settings.py  wsgi.py
docs/: index.md
frontEnd/: index.html  package-lock.json  package.json  tailwind.config.js
frontEnd/src/: App.tsx  index.css  main.tsx
frontEnd/src/api/: api.ts
frontEnd/src/contexts/: ListaDeLivrosContext.tsx  LogadoContext.tsx  ModalContext.tsx
frontEnd/src/data/: conteudoCardInfos.tsx
frontEnd/src/routes/: Router.tsx  Routers.tsx
frontEnd/src/types/: LivroProps.ts
leituraApp/: Procfile  db.sqlite3  manage.py  requirements.txt
leituraApp/api/controllers/: book_controller.py  colecao_controller.py  historico_controller.py  livro_controller.py  usuario_controller.py
leituraApp/api/migrations/: 0001_initial.py  0002_rename_geeksmodel_bookmodel.py
leituraApp/app_leitura/: apps.py  models.py  views.py
leituraApp/config/: asgi.py  settings.py  urls.py
leituraApp/leituraApp/: asgi.py  settings.py  urls.py  wsgi.py
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
tests/: test_ex.py
(+38 files in other folders)
