[tool.poetry]
name = "clp-master"
version = "0.1.0"
description = "trabalho de engenharia de software - UFRPE 2023.1"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
mkdocs = "^1.5.3"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[tool.poetry.group.dev-dependencies.dependencies]
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
